// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentLinks render no children 1`] = `
.emotion-0 {
  display: block;
  padding: 1em;
  border-radius: 3px;
  border: 1px solid gray;
}

.emotion-0 .ee9utdp3 {
  padding: 1rem;
}

<div
  className="emotion-0 emotion-1 document-links"
/>
`;

exports[`DocumentLinks with children render 1`] = `
.emotion-2 {
  display: block;
  padding: 1em;
  border-radius: 3px;
  border: 1px solid gray;
}

.emotion-2 .emotion-1 {
  padding: 1rem;
}

<div
  className="emotion-2 emotion-3 document-links"
>
  <a
    className="emotion-0 emotion-1 document-link"
    href="link1"
  >
    link1
  </a>
</div>
`;

exports[`RelLinks with child 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-area: rellinks;
}

.emotion-2 * {
  padding: .25rem;
  border: 1px dashed black;
}

<div
  className="emotion-2 emotion-3"
>
  <a
    className="emotion-0 emotion-1 document-link"
    href="link1"
  >
    link1
  </a>
</div>
`;

exports[`document render no children 1`] = `
.emotion-0 {
  padding: 1em;
}

<div
  className="emotion-0 emotion-1 docutils-document document"
/>
`;
